trunk/Archive2/78/01290adebf2553/output
main.cpp:9:16: error: expression 'A::f' is not a constant-expression
     alignas(f()) char a[N];
                ^
main.cpp:9: confused by earlier errors, bailing out
